// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> matches snapshot with default props 1`] = `
<div
  className="Flex rowGap0 itemsCenter xsDirectionRow"
>
  <div
    className="box"
  >
    <a
      aria-selected={true}
      className="link hideOutline tapTransition pill block accessibilityOutline"
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      rel=""
      role="tab"
      target={null}
    >
      <div
        className="box darkGrayBg itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone xsDisplayFlex"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "height": 40,
            "minWidth": 60,
          }
        }
      >
        <div
          className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize3 white alignStart noWrap fontWeightBold"
            >
              News
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
  <div
    className="box"
  >
    <a
      aria-selected={false}
      className="link hideOutline tapTransition pill block accessibilityOutline"
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      rel=""
      role="tab"
      target={null}
    >
      <div
        className="box itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone whiteBg xsDisplayFlex"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "height": 40,
            "minWidth": 60,
          }
        }
      >
        <div
          className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
            >
              You
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with dot indicators 1`] = `
<div
  className="Flex rowGap0 itemsCenter xsDirectionRow"
>
  <div
    className="box"
  >
    <a
      aria-selected={true}
      className="link hideOutline tapTransition pill block accessibilityOutline"
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      rel=""
      role="tab"
      target={null}
    >
      <div
        className="box darkGrayBg itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone xsDisplayFlex"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "height": 40,
            "minWidth": 60,
          }
        }
      >
        <div
          className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize3 white alignStart noWrap fontWeightBold"
            >
              News
            </div>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="box circle redBg"
              style={
                Object {
                  "height": 6,
                  "marginTop": "1px",
                  "width": 6,
                }
              }
            />
          </div>
        </div>
      </div>
    </a>
  </div>
  <div
    className="box"
  >
    <a
      aria-selected={false}
      className="link hideOutline tapTransition pill block accessibilityOutline"
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      rel=""
      role="tab"
      target={null}
    >
      <div
        className="box itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone whiteBg xsDisplayFlex"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "height": 40,
            "minWidth": 60,
          }
        }
      >
        <div
          className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
            >
              You
            </div>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="box circle redBg"
              style={
                Object {
                  "height": 6,
                  "marginTop": "1px",
                  "width": 6,
                }
              }
            />
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with lg size and wrap 1`] = `
<div
  className="Flex rowGap0 flexWrap itemsCenter xsDirectionRow"
>
  <div
    className="box"
  >
    <a
      aria-selected={true}
      className="link hideOutline tapTransition pill block accessibilityOutline"
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      rel=""
      role="tab"
      target={null}
    >
      <div
        className="box darkGrayBg itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone xsDisplayFlex"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "height": 48,
            "minWidth": 60,
          }
        }
      >
        <div
          className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize3 white alignStart noWrap fontWeightBold"
            >
              News
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
  <div
    className="box"
  >
    <a
      aria-selected={false}
      className="link hideOutline tapTransition pill block accessibilityOutline"
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      rel=""
      role="tab"
      target={null}
    >
      <div
        className="box itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone whiteBg xsDisplayFlex"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "height": 48,
            "minWidth": 60,
          }
        }
      >
        <div
          className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Text fontSize3 darkGray alignStart noWrap fontWeightBold"
            >
              You
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;
